# aidl-cpp

./: CMakeLists.txt  generate_cpp.cpp
aidl-interface/: CMakeLists.txt  aidl-cpp  build.sh  gen.sh
aidl-interface/coco/: ICalib.aidl  ISensorData.aidl  ISensorListener.aidl
aidl-interface/src/: BnSensorDataImpl.cpp
